--- a/Alicargo.Jobs.BlackBox.Tests/app.config
+++ b/Alicargo.Jobs.BlackBox.Tests/app.config
@@ -4,11 +4,14 @@
 	<configSections>
 	</configSections>
 	<connectionStrings>
-		<add name="Alicargo.Jobs.BlackBox.Tests.Settings.MainConnectionString" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo;Integrated Security=True" />
-		<add name="Alicargo.Jobs.BlackBox.Tests.Settings.FilesConnectionString" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo_Files;Integrated Security=True" />
+		<add name="Alicargo.Jobs.BlackBox.Tests.Settings.MainConnectionString"
+		     connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo;Integrated Security=True" />
+		<add name="Alicargo.Jobs.BlackBox.Tests.Settings.FilesConnectionString"
+		     connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo_Files;Integrated Security=True" />
 	</connectionStrings>
 	<appSettings>
 		<add key="JobPausePeriod" value="00:00:05" />
+		<add key="CourseSourceAttempts" value="1" />
 	</appSettings>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
