--- a/Alicargo.Jobs.BlackBox.Tests/app.config
+++ b/Alicargo.Jobs.BlackBox.Tests/app.config
@@ -4,10 +4,8 @@
 	<configSections>
 	</configSections>
 	<connectionStrings>
-		<add name="Alicargo.Jobs.BlackBox.Tests.Settings.MainConnectionString"
-		     connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo;Integrated Security=True" />
-		<add name="Alicargo.Jobs.BlackBox.Tests.Settings.FilesConnectionString"
-		     connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo_Files;Integrated Security=True" />
+		<add name="Alicargo.Jobs.BlackBox.Tests.Settings.MainConnectionString" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo;Integrated Security=True" />
+		<add name="Alicargo.Jobs.BlackBox.Tests.Settings.FilesConnectionString" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo_Files;Integrated Security=True" />
 	</connectionStrings>
 	<appSettings>
 		<add key="JobPausePeriod" value="00:00:05" />
@@ -37,7 +35,7 @@
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="Ploeh.AutoFixture" publicKeyToken="b24654c590009d4f" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-3.18.6.0" newVersion="3.18.6.0" />
+				<bindingRedirect oldVersion="0.0.0.0-3.18.8.0" newVersion="3.18.8.0" />
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" culture="neutral" />
