removed files from awb models

--- a/Alicargo.DataAccess.BlackBox.Tests/Alicargo.DataAccess.BlackBox.Tests.csproj
+++ b/Alicargo.DataAccess.BlackBox.Tests/Alicargo.DataAccess.BlackBox.Tests.csproj
@@ -95,7 +95,8 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Helpers\ApplicationRepositoryOrdererTests.cs" />
-    <Compile Include="Repositories\Application\UnitTest1.cs" />
+    <Compile Include="Repositories\Application\ApplicationFileRepositoryTests.cs" />
+    <Compile Include="Repositories\Application\AwbFileRepositoryTests.cs" />
     <Compile Include="Repositories\CountryRepositoryTests.cs" />
     <Compile Include="Repositories\EmailMessageRepositoryTests.cs" />
     <Compile Include="Repositories\EventEmailRecipientTests.cs" />
