--- a/Alicargo/Alicargo.csproj
+++ b/Alicargo/Alicargo.csproj
@@ -596,6 +596,7 @@
     <Content Include="Content\themes\jMetro\images\ui-icons_ffffff_0.png" />
     <Content Include="Content\themes\jMetro\jquery-ui.css" />
     <Content Include="Scripts\app\AirWaybill\Columns.js" />
+    <Content Include="Scripts\app\AirWaybill\FileButton.js" />
     <Content Include="Scripts\app\AirWaybill\Files.js" />
     <Content Include="Scripts\app\AirWaybill\Grid.js" />
     <Content Include="Scripts\app\Alicargo.js" />
@@ -789,6 +790,7 @@
     <Content Include="Views\AdminAwb\EditButtons.cshtml" />
     <Content Include="Views\BrokerAwb\EditButtons.cshtml" />
     <Content Include="Views\SenderAwb\EditButtons.cshtml" />
+    <Content Include="Views\Shared\_PopupLayout.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config">
