--- a/Alicargo/Web.Release.config
+++ b/Alicargo/Web.Release.config
@@ -19,7 +19,7 @@
 				<network host="smtp.gmail.com" enableSsl="true" userName="robot@alicargo.ru" password="GI7zMju78Jdik4ef" port="587" />
 			</smtp>
 			<!--<smtp deliveryMethod="SpecifiedPickupDirectory" from="robot@alicargo.ru">
-				<specifiedPickupDirectory pickupDirectoryLocation="C:\inetpub\wwwroot\Alicargo_2_4\Mails" />
+				<specifiedPickupDirectory pickupDirectoryLocation="C:\inetpub\wwwroot\Mails" />
 			</smtp>-->
 		</mailSettings>
 	</system.net>
