added setting CourseSourceRetryPolicyPeriod

--- a/Alicargo/Web.config
+++ b/Alicargo/Web.config
@@ -24,6 +24,7 @@
 		<add key="SupportEmail" value="6alyamov@gmail.com" />
 
 		<add key="JobPausePeriod" value="00:00:05" />
+		<add key="CourseSourceRetryPolicyPeriod" value="01:00:00" />
 
 		<add key="DefaultInsuranceRate" value="0.01" />
 		<add key="CourseSourceAttempts" value="3" />
