--- a/Alicargo.Tests/Alicargo.Tests.csproj
+++ b/Alicargo.Tests/Alicargo.Tests.csproj
@@ -112,6 +112,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Areas\Admin\Serivices\Bill\BillModelFactoryTests.cs" />
+    <Compile Include="Controllers\Application\ApplicationListControllerTests.cs" />
     <Compile Include="JobRunnerHelperTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
