--- a/Alicargo/Web.config
+++ b/Alicargo/Web.config
@@ -30,9 +30,9 @@
 		<add key="CourseSourceAttempts" value="3" />
 	</appSettings>
 	<connectionStrings>
-		<add connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo;Integrated Security=True"
+		<add connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo_2_8;Integrated Security=True"
 		     name="MainConnectionString" providerName="System.Data.SqlClient" />
-		<add connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo_Files;Integrated Security=True"
+		<add connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo_Files_2_8;Integrated Security=True"
 		     name="FilesDbConnectionString" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 	<system.net>
