--- a/Alicargo.DataAccess.Contracts/Alicargo.DataAccess.Contracts.csproj
+++ b/Alicargo.DataAccess.Contracts/Alicargo.DataAccess.Contracts.csproj
@@ -51,18 +51,19 @@
     <Compile Include="Contracts\Application\ApplicationEditData.cs" />
     <Compile Include="Contracts\Application\BillData.cs" />
     <Compile Include="Contracts\Awb\AirWaybillEditData.cs" />
+    <Compile Include="Contracts\Calculation\RegistryOfPaymentsData.cs" />
     <Compile Include="Contracts\EventData.cs" />
     <Compile Include="Contracts\ApplicationEventTemplateData.cs" />
     <Compile Include="Contracts\Application\ApplicationData.cs" />
     <Compile Include="Contracts\EventDataForEntity.cs" />
     <Compile Include="Contracts\Setting.cs" />
     <Compile Include="Contracts\State\StateEditData.cs" />
-    <Compile Include="Contracts\User\ClientBalanceHistoryItem.cs" />
+    <Compile Include="Contracts\Calculation\ClientBalanceHistoryItem.cs" />
     <Compile Include="Contracts\User\ClientEditData.cs" />
     <Compile Include="Contracts\User\EmailData.cs" />
     <Compile Include="Contracts\User\PasswordData.cs" />
     <Compile Include="Contracts\User\BrokerData.cs" />
-    <Compile Include="Contracts\CalculationData.cs" />
+    <Compile Include="Contracts\Calculation\CalculationData.cs" />
     <Compile Include="Contracts\User\CarrierData.cs" />
     <Compile Include="Contracts\CityData.cs" />
     <Compile Include="Contracts\User\ClientData.cs" />
