--- a/Alicargo/Alicargo.csproj
+++ b/Alicargo/Alicargo.csproj
@@ -189,7 +189,7 @@
     <Compile Include="Areas\Admin\Serivices\Abstract\IBillManager.cs" />
     <Compile Include="Areas\Admin\Serivices\Abstract\IBillModelFactory.cs" />
     <Compile Include="Areas\Admin\Serivices\Bill\NumByWords.cs" />
-    <Compile Include="Areas\Forwarder\Controllers\ApplicationListController.cs" />
+    <Compile Include="Areas\Forwarder\Controllers\ApplicationsController.cs" />
     <Compile Include="Areas\Forwarder\ForwarderAreaRegistration.cs" />
     <Compile Include="AuthenticationController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
@@ -234,7 +234,7 @@
     <Compile Include="ExcelController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
     </Compile>
-    <Compile Include="Forwarder.ApplicationListController.generated.cs">
+    <Compile Include="Forwarder.ApplicationsController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
     </Compile>
     <Compile Include="Forwarder.SharedController.generated.cs">
@@ -649,7 +649,7 @@
     <Content Include="Areas\Admin\Views\Bill\Sent.cshtml" />
     <Content Include="Areas\Forwarder\Views\web.config" />
     <Content Include="Areas\Forwarder\Views\_ViewStart.cshtml" />
-    <Content Include="Areas\Forwarder\Views\ApplicationList\Index.cshtml" />
+    <Content Include="Areas\Forwarder\Views\Applications\Index.cshtml" />
     <None Include="Properties\PublishProfiles\Dev.pubxml" />
     <None Include="Properties\PublishProfiles\Release.pubxml" />
     <None Include="Scripts\jQuery\jquery-2.1.1.intellisense.js" />
