updated db deploy

--- a/Alicargo/Web.Dev.config
+++ b/Alicargo/Web.Dev.config
@@ -3,10 +3,10 @@
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
 	<connectionStrings>
 		<add xdt:Transform="SetAttributes" xdt:Locator="Match(name)" name="MainConnectionString"
-		     connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo_Dev;Integrated Security=True;"
+		     connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Dev_Alicargo;Integrated Security=True;"
 		     providerName="System.Data.SqlClient" />
 		<add xdt:Transform="SetAttributes" xdt:Locator="Match(name)"
-		     connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo_Files_Dev;Integrated Security=True"
+		     connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Dev_Alicargo_Files;Integrated Security=True"
 		     name="FilesDbConnectionString" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 	<appSettings>
@@ -15,7 +15,7 @@
 	<system.net>
 		<mailSettings xdt:Transform="Replace">
 			<smtp deliveryMethod="SpecifiedPickupDirectory" from="robot@alicargo.ru">
-				<specifiedPickupDirectory pickupDirectoryLocation="C:\inetpub\wwwroot\Alicargo.Dev\Mails" />
+				<specifiedPickupDirectory pickupDirectoryLocation="C:\inetpub\wwwroot\Mails" />
 			</smtp>
 			<!--<smtp deliveryMethod="Network" from="robot@alicargo.ru">
 				<network host="smtp.gmail.com" enableSsl="true" userName="robot@alicargo.ru" password="GI7zMju78Jdik4ef" port="587" />
