--- a/Alicargo.Core.Tests/app.config
+++ b/Alicargo.Core.Tests/app.config
@@ -2,8 +2,11 @@
 
 <configuration>
 	<configSections>
-		<sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-			<section name="Alicargo.Core.Tests.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+		<sectionGroup name="userSettings"
+		              type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+			<section name="Alicargo.Core.Tests.Properties.Settings"
+			         type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+			         allowExeDefinition="MachineToLocalUser" requirePermission="false" />
 		</sectionGroup>
 	</configSections>
 	<system.net>
@@ -41,10 +44,6 @@
 			<dependentAssembly>
 				<assemblyIdentity name="Antlr3.Runtime" publicKeyToken="eb42632606e9261f" culture="neutral" />
 				<bindingRedirect oldVersion="0.0.0.0-3.5.0.2" newVersion="3.5.0.2" />
-			</dependentAssembly>
-			<dependentAssembly>
-				<assemblyIdentity name="Ploeh.AutoFixture" publicKeyToken="b24654c590009d4f" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-3.18.9.0" newVersion="3.18.9.0" />
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" culture="neutral" />
