--- a/Alicargo.Core.Tests/app.config
+++ b/Alicargo.Core.Tests/app.config
@@ -12,14 +12,14 @@
 	<system.net>
 		<mailSettings>
 			<smtp deliveryMethod="SpecifiedPickupDirectory" from="noreply@timez.org">
-				<specifiedPickupDirectory pickupDirectoryLocation="D:\S\Projects\Alicargo\Alicargo\Mails" />
+				<specifiedPickupDirectory pickupDirectoryLocation="A:\Projects\Alicargo\Alicargo\Mails" />
 			</smtp>
 		</mailSettings>
 	</system.net>
 	<userSettings>
 		<Alicargo.Core.Tests.Properties.Settings>
 			<setting name="MailsFolder" serializeAs="String">
-				<value>D:\S\Projects\Alicargo\Alicargo\Mails</value>
+				<value>A:\Projects\Alicargo\Alicargo\Mails</value>
 			</setting>
 		</Alicargo.Core.Tests.Properties.Settings>
 	</userSettings>
