--- a/Alicargo/packages.config
+++ b/Alicargo/packages.config
@@ -12,10 +12,17 @@
   <package id="log4net" version="2.0.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR" version="2.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="2.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.JS" version="2.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.2" targetFramework="net45" />
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.2" targetFramework="net45" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.2" targetFramework="net45" />
+  <package id="Microsoft.Owin" version="2.0.1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="2.0.1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security" version="2.0.1" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.5" targetFramework="net45" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net45" />
@@ -23,6 +30,7 @@
   <package id="Ninject.MVC3" version="3.2.1.0" targetFramework="net45" />
   <package id="Ninject.Web.Common" version="3.2.2.0" targetFramework="net45" />
   <package id="Ninject.Web.Common.WebHost" version="3.2.2.0" targetFramework="net45" />
+  <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="T4MVC" version="3.10.0" targetFramework="net45" />
   <package id="T4MVCExtensions" version="3.10.0" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.0.5" targetFramework="net45" />
