--- a/Alicargo.Deploy/Alicargo.Deploy.csproj
+++ b/Alicargo.Deploy/Alicargo.Deploy.csproj
@@ -37,9 +37,9 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <Content Include="Databases\Alicargo_2_8-2_9.sql" />
+    <Content Include="Databases\Alicargo_2_8-3_0.sql" />
     <Content Include="Databases\Alicargo_0_0-2_8.sql" />
-    <Content Include="Databases\Alicargo_Files_2_8.sql" />
+    <Content Include="Databases\Alicargo_Files_0_0-2_8.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
