--- a/Alicargo.Deploy/Alicargo.Deploy.csproj
+++ b/Alicargo.Deploy/Alicargo.Deploy.csproj
@@ -37,6 +37,7 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <Content Include="Databases\Alicargo_3_0_3_1.sql" />
     <Content Include="Databases\Alicargo_2_8-3_0.sql" />
     <Content Include="Databases\Alicargo_0_0-2_8.sql" />
     <Content Include="Databases\Alicargo_Files_0_0-2_8.sql" />
